--- a/dev/css/intrnt_parcel_delivery_media.scss
+++ b/dev/css/intrnt_parcel_delivery_media.scss
@@ -226,7 +226,7 @@
                 width: 40px;
                 height: 40px;
             }
-            p{
+            span{
                 font-size: 12px;
                 line-height: 140%; /* 16.8px */
                 letter-spacing: 0.24px;
