--- a/dev/css/intrnt_parcel_delivery_media.scss
+++ b/dev/css/intrnt_parcel_delivery_media.scss
@@ -107,6 +107,11 @@
             }
             .input-country-search{
                 width: 70%;
+                padding: 16px 21px;
+                input{
+                    padding-left: 37px;
+                    background-position: 0px center;
+                }
             }
         }
     }
