--- a/front/css/intrnt_parcel_delivery.css
+++ b/front/css/intrnt_parcel_delivery.css
@@ -112,10 +112,50 @@ body {
 
 .intrnt-parcel-delivery.top-wrap {
   padding-top: 30px;
+  position: relative;
+}
+.intrnt-parcel-delivery.top-wrap .swiper-buttons-country {
+  display: block;
+}
+.intrnt-parcel-delivery.top-wrap .swiper-buttons-country .swiper-button-prev, .intrnt-parcel-delivery.top-wrap .swiper-buttons-country .swiper-button-next {
+  text-align: center;
+  cursor: pointer;
+  z-index: 3;
+  position: absolute;
+  right: 0 !important;
+  background: #fff;
+  height: 60px !important;
+  width: 64px !important;
+  border-radius: 100px 0 0 100px !important;
+  display: flex !important;
+  align-items: center;
+  justify-content: center;
+  transform: translate(0);
+}
+.intrnt-parcel-delivery.top-wrap .swiper-buttons-country .swiper-button-prev {
+  top: 40% !important;
+  background-image: url(../img/arrow_prev.svg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 8px 14px;
+}
+.intrnt-parcel-delivery.top-wrap .swiper-buttons-country .swiper-button-next {
+  top: 53% !important;
+  background-image: url(../img/arrow_country.svg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 8px 14px;
 }
 .intrnt-parcel-delivery.top-wrap .top-wrap__inner {
   display: flex;
   align-items: center;
+}
+.intrnt-parcel-delivery.top-wrap .top-wrap__inner .swiper-slide {
+  height: unset !important;
+  display: flex;
+}
+.intrnt-parcel-delivery.top-wrap .top-wrap__inner .slide-country {
+  display: flex;
 }
 .intrnt-parcel-delivery.top-wrap .navigation-international-del {
   background-color: rgb(255, 255, 255);
@@ -204,18 +244,10 @@ body {
   display: flex;
   align-items: center;
 }
-.intrnt-parcel-delivery.top-wrap .text-part .flex-buttons .swiper-buttons {
-  margin: unset;
-  border: 1px solid #2361A9;
-  width: 153px !important;
-}
-.intrnt-parcel-delivery.top-wrap .text-part .flex-buttons .swiper-buttons .swiper-button-prev, .intrnt-parcel-delivery.top-wrap .text-part .flex-buttons .swiper-buttons .swiper-button-next {
-  background-color: transparent !important;
-}
 .intrnt-parcel-delivery.top-wrap .main-img {
   width: 47%;
 }
-.intrnt-parcel-delivery.top-wrap .main-img .img-slide img {
+.intrnt-parcel-delivery.top-wrap .main-img img {
   width: 100%;
 }
 
@@ -387,9 +419,12 @@ body {
 }
 
 .swiper-pagination-img {
+  z-index: 3;
+  position: absolute;
   text-align: center;
   pointer-events: none;
-  top: 50% !important;
+  top: unset !important;
+  bottom: 0;
   font-weight: 600;
   font-size: 15px;
   line-height: 109%;
@@ -402,6 +437,13 @@ body {
 }
 .swiper-pagination-img .swiper-pagination-total {
   color: rgba(35, 97, 169, 0.5);
+}
+.swiper-pagination-img .swiper-pagination-bullet {
+  background: var(--swiper-pagination-bullet-inactive-color, #fff);
+  opacity: var(--swiper-pagination-bullet-inactive-opacity, 1);
+}
+.swiper-pagination-img .swiper-pagination-bullet-active {
+  background: var(--swiper-pagination-bullet-inactive-color, #0061AF);
 }
 
 .swiper-button-prev {
@@ -660,12 +702,14 @@ body {
   height: 120px;
   border-radius: 50%;
   margin-bottom: 20px;
+  background-color: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .restr-shipments-wrapper__col .img img {
-  width: 100%;
+  width: 63px;
+  height: 63px;
 }
 .restr-shipments-wrapper__col h3 {
   color: #0061AF;
