--- a/dev/css/intrnt_parcel_delivery_media.scss
+++ b/dev/css/intrnt_parcel_delivery_media.scss
@@ -483,3 +483,333 @@ body .select2-container--default .select2-selection--single {
     border: unset;
 }
 }
+
+@media(max-width: 1250px){
+.delivery-way-wrap__center-col h3 {
+    font-size: 30px;
+}  
+.delivery-way-wrap__center-col::after {
+    bottom: 25px;
+    width: 82px;
+} 
+.delivery-way-wrap{
+    &__col{
+        &:nth-child(4){
+            &:after{
+                top: 17px;
+                right: -15px;
+                transform: rotate(-75deg);
+            }
+        }
+        &:last-of-type{
+            &:after{
+                width: 128px;
+            }
+        }
+    }
+}
+}
+
+@media(max-width: 1050px){
+.delivery-way-sec{
+    .blue-button45{
+        img{
+            width: 14px;
+            height: 8px;
+            margin-left: 15px;
+        }
+    }
+}
+.delivery-way-wrap__center-col h3{
+    font-size: 25px;
+    line-height: 35px;
+}
+.delivery-way-wrap__center-col::after {
+    bottom: 26px;
+    right: 0px;
+}
+.delivery-way-wrap{
+    &__col{
+        &:nth-child(4){
+            &:after{
+                top: 1px;
+                right: -28px;
+            }
+        }
+    }
+}
+}
+@media(max-width: 990px){
+.delivery-way-sec{
+    height: 400px;
+    background-size: 100% 100%;
+}
+.delivery-way-wrap{
+    &__col{
+        img{
+            width: 80px;
+            height: 80px;
+        }
+        h4{
+            font-size: 15px;
+        }
+        p{
+            font-size: 12px;
+        }
+        &:nth-child(2){
+            &:after{
+                width: 335px;
+                top: -105px;
+                left: 30px;
+            }
+        }
+        &:last-of-type{
+            &:after{
+                right: -64px;
+                width: 104px;
+            }
+        }
+    }
+    &__center-col{
+        h3 {
+            font-size: 20px;
+            line-height: 27px;
+        }
+        &:after{
+            bottom: 14px;
+            right: -35px;
+            width: 59px;
+        }
+    } 
+}
+}
+@media(max-width: 850px){
+.delivery-way-sec{
+    .blue-button45{
+        img{
+            margin-left: 5px;
+        }
+    }
+}
+.delivery-way-wrap{
+    &__col{
+        &:nth-child(1){
+            &:after{
+                width: 200px;
+            }
+        }
+        &:nth-child(4){
+            &:after{
+                transform: rotate(-88deg);
+                width: 45px;
+                top: -29px;
+                right: -31px;
+            }
+        }
+    }
+    &__center-col{
+        &:after{
+            right: 0px;
+            width: 36px;
+        }
+    }
+}
+}
+@media(max-width: 768px){
+.delivery-way-sec{
+    height: auto;
+    background-image: url(../img/bcg_del_way_sec_mobile.png);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    &__title{
+        display: block;
+        text-align: center;
+        color: #0061AF;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 26px;
+        margin-bottom: 60px;
+    }
+    .center-bth{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .blue-button45{
+        img{
+            margin-left: 45px;
+        }
+    }
+}
+.delivery-way-wrap{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    margin-bottom: 25px;
+    &__col{
+        width: 100%;
+        &:nth-child(1){
+            position: relative;
+            top: unset;
+            left: unset;
+            right: unset;
+            grid-column-start: 1;
+            grid-column-end: 2;
+            grid-row-start: 1;
+            grid-row-end: 2;
+            &:after{
+                background-image: url(../img/img_del_way_mobile1.png);
+                background-repeat: no-repeat;
+                top: 6px;
+                left: unset;
+                right: -157px;
+                width: 188px;
+                height: 166px;
+            }
+        }
+        &:nth-child(2){
+            position: relative;
+            top: unset;
+            left: unset;
+            right: unset;
+            grid-column-start: 2;
+            grid-column-end: 3;
+            grid-row-start: 2;
+            grid-row-end: 3;
+            &:after{
+                background-image: url(../img/img_del_way_mobile2.png);
+                background-repeat: no-repeat;
+                top: 25px;
+                left: -243px;
+                right: unset;
+                width: 89px;
+                height: 145px;
+                transform: rotate(49deg);
+            }
+        }
+        &:nth-child(4){
+            position: relative;
+            top: unset;
+            right: unset;
+            left: unset;
+            grid-column-start: 1;
+            grid-column-end: 2;
+            grid-row-start: 3;
+            grid-row-end: 4;
+            &:after{
+                background-image: url(../img/img_del_way_mobile3.png);
+                background-repeat: no-repeat;
+                top: 20px;
+                left: unset;
+                right: -172px;
+                width: 167px;
+                height: 204px;
+                transform: rotate(-14deg);
+            }
+        }
+        &:nth-child(5){
+            position: relative;
+            top: unset;
+            left: unset;
+            right: unset;
+            grid-column-start: 2;
+            grid-column-end: 3;
+            grid-row-start: 4;
+            grid-row-end: 5;
+            &:after{
+                background-image: url(../img/img_del_way_mobile4.png);
+                background-repeat: no-repeat;
+                top: 67px;
+                left: -256px;
+                right: unset;
+                width: 141px;
+                height: 66px;
+                transform: rotate(0deg);
+            }
+        }
+    }
+    &__center-col{
+        display: none;
+    }
+}
+}
+@media(max-width: 650px){
+.delivery-way-wrap{
+    &__col{
+        &:nth-child(2){
+            &:after{
+                top: 25px;
+                left: -169px;
+                transform: rotate(35deg);
+            }
+        }
+        // &:nth-child(4){
+        //     &:after{
+
+        //     }
+
+        // }
+        // &:nth-child(5){
+
+        // }
+    }
+}
+}
+@media(max-width: 500px){
+    .delivery-way-wrap{
+        &__col{
+            &:nth-child(2){
+                &:after{
+                    top: 25px;
+                    left: -169px;
+                    transform: rotate(35deg);
+                }
+            }
+            &:nth-child(4){
+                &:after{
+                    top: 17px;
+                    right: -139px;
+                    transform: rotate(-3deg);
+                }
+    
+            }
+            &:nth-child(5){
+    
+            }
+        }
+    }
+}
+@media(max-width: 400px){
+    .delivery-way-wrap{
+        &__col{
+            &:nth-child(1){
+                &:after{
+                    top: 40px;
+                    right: -144px;
+                }
+            }
+            &:nth-child(2){
+                &:after{
+                    top: 25px;
+                    left: -125px;
+                    transform: rotate(7deg);
+                }
+            }
+            &:nth-child(4){
+                &:after{
+                    top: 17px;
+                    right: -139px;
+                    transform: rotate(-3deg);
+                }
+    
+            }
+            &:nth-child(5){
+                &:after{
+                    top: 50px;
+                    left: -161px;
+                    transform: rotate(10deg);
+                }
+            }
+        }
+    }
+}
